syntax = "proto3";

package gRPC;

option go_package = "handin4/gRPC";

service MutualExclusion {
  //Node requests access to Critical Section
  rpc RequestAccess(Replier) returns (stream Reply);
}

message Replier {
  Node RequesterNode = 1;
  int64 SequenceNumber = 2;
  int64 timestamp = 3;
}

message Reply {
  int64 NodeID = 1;
  bool Accepted = 2;
  //if Accepted = True, this means message will be defered
  //List<Node> Recipients = 3;
}

message Node {
    int64 NodeID = 1;
    int64 SeqeuenceNumber = 2;
}